Resolved My Points text clipping into neighboring boxes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -296,14 +296,15 @@
 	font-size: 18px;
 }
 #point_count {
-	padding-right: 10px;
+	/*padding-right: 10px;
 	width: 100%;
 	box-sizing: border-box;
-	font-size: 50px;
+	font-size: 50px;*/
 	letter-spacing: -1.5px;
 	font-weight: bold;
 	color: rgb(254, 202, 10);
-	margin-top: 18.0px;
+	margin-top: 14.0px;
+    margin-left: -1px;
 	text-align: center;
 }
 
